syntax = "proto3";

package users;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service UserManager {
  rpc GetAllUsers (google.protobuf.Empty) returns (stream UserInfo);
}

message UserInfo {
  string first_name = 1;
  string surname = 2;
  string gender = 3;
  google.protobuf.Timestamp date_of_birth = 4;
  string nationality = 5;
  AddressInfo address = 6; 
}

message AddressInfo {
    string first_line = 1;
    string town = 2;
    string postcode_or_zip_code = 3;
    string country = 4;
}